Shazir/csc8567-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csc8567-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: csc8567
        image: xhelozs/csc8567:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "100M"
            cpu: "0.1"
          limits:
            memory: "200M"
            cpu: "0.2"
