Shazir/db-vroumvroum-statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-vroumvroum-statefulset
spec:
  replicas: 1  # 3 répliques
  selector:
    matchLabels:
      app: db-vroumvroum
  template:
    metadata:
      labels:
        app: db-vroumvroum
    spec:
      containers:
      - name: db-vroumvroum-container
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data/
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
