Shazir/web-vroumvroum-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-vroumvroum-deployment-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-vroumvroum-api
  template:
    metadata:
      labels:
        app: web-vroumvroum-api
    spec:
      containers:
      - name: web-vroumvroum-container-api
        image: shazbg/vroumvroum:api
        ports:
        - containerPort: 8001
        resources:
          requests:
            memory: "100M"
            cpu: "0.1"
          limits:
            memory: "200M"
            cpu: "0.2"
