Shazir/web-vroumvroum-deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-vroumvroum-deployment-front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-vroumvroum-front
  template:
    metadata:
      labels:
        app: web-vroumvroum-front
    spec:
      containers:
      - name: web-vroumvroum-container-front
        image: shazbg/vroumvroum:front
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "100M"
            cpu: "0.1"
          limits:
            memory: "200M"
            cpu: "0.2"
