Shazir/csc8567-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csc8567-service
spec:
  type: NodePort
  selector:
    app: csc8567
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30007
