Shazir/db-vroumvroum-svc.yaml
apiVersion: v1
kind: Service
metadata: 
 name: db-vroumvroum-svc
spec:
 clusterIP: None
 selector:   
   app: db-vroumvroum
 type: ClusterIP
 ports: 
 - port: 5432
   targetPort: 5432
   protocol: TCP
